<resources>
    <string name="app_name">Честная цена</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="weight_product_subtitle">Вес, г</string>
    <string name="volume_product_subtitle">Объем, мл</string>
    <string name="pices_product_subtitle">Количество, шт</string>
    <string name="price_product_string">Цена, руб</string>
    <string name="reset">Сбросить</string>
    <string name="record_price">Запомнить</string>
    <string name="postfix_rub_kg">руб/кг</string>
    <string name="postfix_rub_liter">руб/л</string>
    <string name="postfix_rub_piece">руб/шт</string>
    <string name="NaN_string">––</string>
</resources>