<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragments.WeightFragment">


    <LinearLayout
        android:id="@+id/llResultPrice"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/margin_result_container_LR"
        android:layout_marginTop="16dp"
        android:layout_marginRight="@dimen/margin_result_container_LR"
        android:background="@drawable/background_result_price"
        android:orientation="vertical"
        android:paddingTop="@dimen/padding_result_container"
        android:paddingBottom="@dimen/padding_result_container"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tvWeightResultPrice"
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:gravity="center_horizontal|center_vertical"
            android:textColor="#454444"
            android:textSize="@dimen/text_size_result_price"
            tools:text="500" />

        <TextView
            android:id="@+id/tvPostfixPrice"
            android:layout_width="match_parent"

            android:layout_height="match_parent"
            android:gravity="center_horizontal|center_vertical"
            android:textColor="#454444"
            android:textSize="@dimen/text_size_enter_values"
            tools:text="@string/postfix_rub_kg" />
    </LinearLayout>

    <Button
        android:id="@+id/btnWeightRec"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/app_margin"
        android:layout_marginTop="8dp"
        android:layout_marginRight="@dimen/app_margin"
        android:text="@string/record_price"
        android:textSize="@dimen/text_size_button"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/llResultPrice" />


    <HorizontalScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/app_margin"
        android:layout_marginEnd="@dimen/app_margin"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnWeightRec">

        <LinearLayout
            android:id="@+id/llRecordPricesContainer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="gone" />
    </HorizontalScrollView>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="16dp"
        android:background="@color/blue_accent"
        app:layout_constraintTop_toBottomOf="@+id/scrollView" />

    <TextView
        android:id="@+id/textView9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/price_product_string"
        android:textSize="@dimen/text_size_subtitle"
        app:layout_constraintEnd_toEndOf="@+id/etPriceProduct"
        app:layout_constraintStart_toStartOf="@+id/etPriceProduct"
        app:layout_constraintTop_toTopOf="@+id/tvSubtitleProduct" />

    <TextView
        android:id="@+id/tvSubtitleProduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:textSize="@dimen/text_size_subtitle"
        app:layout_constraintEnd_toEndOf="@+id/etWeightProduct"
        app:layout_constraintStart_toStartOf="@+id/etWeightProduct"
        app:layout_constraintTop_toBottomOf="@+id/view"
        tools:text="@string/weight_product_subtitle" />

    <EditText
        android:id="@+id/etPriceProduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/background_input"
        android:ems="4"
        android:gravity="center_horizontal|center_vertical"
        android:inputType="numberDecimal"
        android:paddingTop="@dimen/padding_vertical_input"
        android:paddingBottom="@dimen/padding_vertical_input"
        android:selectAllOnFocus="true"
        android:text="0.00"
        android:textSize="@dimen/text_size_enter_values"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView9" />

    <EditText
        android:id="@+id/etWeightProduct"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/background_input"
        android:ems="4"
        android:gravity="center_horizontal|center_vertical"
        android:inputType="numberDecimal"
        android:paddingTop="@dimen/padding_vertical_input"
        android:paddingBottom="@dimen/padding_vertical_input"
        android:selectAllOnFocus="true"
        android:text="0"
        android:textSize="@dimen/text_size_enter_values"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvSubtitleProduct" />

    <Button
        android:id="@+id/btnWeightReset"
        style="@style/Widget.Material3.Button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/reset"
        android:textSize="@dimen/text_size_button"
        app:layout_constraintEnd_toEndOf="@+id/etPriceProduct"
        app:layout_constraintHorizontal_bias="0.500"
        app:layout_constraintStart_toStartOf="@+id/etWeightProduct"
        app:layout_constraintTop_toBottomOf="@+id/etWeightProduct" />


</androidx.constraintlayout.widget.ConstraintLayout>